--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -3,7 +3,7 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: "Product Sans", sans-serif;
+$font-family-sans-serif: "Nunito Sans", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
