--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -62,3 +62,12 @@ body,
     right: 0;
 }
 
+@media only screen and (max-width: 600px) {
+    .sidebar {
+        display: none;
+    }
+
+    .main {
+        left: 0;
+    }
+}
